Added training ntbs for remaining classifier

--- a/phishing/phishing_cnn_train.ipynb
+++ b/phishing/phishing_cnn_train.ipynb
@@ -28,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "12a3b996",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda:0\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -44,7 +52,11 @@
     "\n",
     "import sys\n",
     "\n",
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
+    "\n",
+    "    \n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "print(device)"
    ]
   },
   {
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "069058d7",
    "metadata": {},
    "outputs": [
@@ -479,7 +491,7 @@
        "[647307 rows x 174 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "87705691",
    "metadata": {},
    "outputs": [
@@ -951,7 +963,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.176471</td>\n",
        "      <td>0.000018</td>\n",
-       "      <td>0.530165</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
@@ -1127,7 +1139,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.176471</td>\n",
        "      <td>0.000018</td>\n",
-       "      <td>0.530165</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
@@ -1303,7 +1315,7 @@
        "      <td>0.042632</td>\n",
        "      <td>0.235294</td>\n",
        "      <td>0.000819</td>\n",
-       "      <td>0.555839</td>\n",
+       "      <td>0.001249</td>\n",
        "      <td>0.176068</td>\n",
        "      <td>0.176068</td>\n",
        "      <td>1.0</td>\n",
@@ -1479,7 +1491,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.176471</td>\n",
        "      <td>0.000279</td>\n",
-       "      <td>0.584087</td>\n",
+       "      <td>0.002624</td>\n",
        "      <td>0.380236</td>\n",
        "      <td>0.380236</td>\n",
        "      <td>0.0</td>\n",
@@ -1655,7 +1667,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.176471</td>\n",
        "      <td>0.000279</td>\n",
-       "      <td>0.584087</td>\n",
+       "      <td>0.002624</td>\n",
        "      <td>0.380236</td>\n",
        "      <td>0.380236</td>\n",
        "      <td>0.0</td>\n",
@@ -2007,7 +2019,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.578949</td>\n",
+       "      <td>0.002374</td>\n",
        "      <td>0.194285</td>\n",
        "      <td>0.194285</td>\n",
        "      <td>0.0</td>\n",
@@ -2183,7 +2195,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.573810</td>\n",
+       "      <td>0.002124</td>\n",
        "      <td>0.292399</td>\n",
        "      <td>0.292399</td>\n",
        "      <td>0.0</td>\n",
@@ -2359,7 +2371,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.530165</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
@@ -2535,7 +2547,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.578949</td>\n",
+       "      <td>0.002374</td>\n",
        "      <td>0.194285</td>\n",
        "      <td>0.194285</td>\n",
        "      <td>0.0</td>\n",
@@ -2711,7 +2723,7 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.560975</td>\n",
+       "      <td>0.001499</td>\n",
        "      <td>0.207208</td>\n",
        "      <td>0.207208</td>\n",
        "      <td>0.0</td>\n",
@@ -3431,17 +3443,17 @@
        "647306            0.000000            0.000000            0.000000   \n",
        "\n",
        "        rdap_registration_period  rdap_domain_age  rdap_domain_active_time  \\\n",
-       "0                       0.530165         0.000000                 0.000000   \n",
-       "1                       0.530165         0.000000                 0.000000   \n",
-       "2                       0.555839         0.176068                 0.176068   \n",
-       "3                       0.584087         0.380236                 0.380236   \n",
-       "4                       0.584087         0.380236                 0.380236   \n",
+       "0                       0.000000         0.000000                 0.000000   \n",
+       "1                       0.000000         0.000000                 0.000000   \n",
+       "2                       0.001249         0.176068                 0.176068   \n",
+       "3                       0.002624         0.380236                 0.380236   \n",
+       "4                       0.002624         0.380236                 0.380236   \n",
        "...                          ...              ...                      ...   \n",
-       "647302                  0.578949         0.194285                 0.194285   \n",
-       "647303                  0.573810         0.292399                 0.292399   \n",
-       "647304                  0.530165         0.000000                 0.000000   \n",
-       "647305                  0.578949         0.194285                 0.194285   \n",
-       "647306                  0.560975         0.207208                 0.207208   \n",
+       "647302                  0.002374         0.194285                 0.194285   \n",
+       "647303                  0.002124         0.292399                 0.292399   \n",
+       "647304                  0.000000         0.000000                 0.000000   \n",
+       "647305                  0.002374         0.194285                 0.194285   \n",
+       "647306                  0.001499         0.207208                 0.207208   \n",
        "\n",
        "        rdap_has_dnssec  rdap_registrar_name_len  rdap_registrar_name_entropy  \\\n",
        "0                   0.0                 0.628866                     0.133400   \n",
@@ -3563,7 +3575,7 @@
        "[647307 rows x 173 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3594,7 +3606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "ae4bf762",
    "metadata": {},
    "outputs": [],
@@ -3621,7 +3633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "96ecaeb0",
    "metadata": {},
    "outputs": [],
@@ -3663,7 +3675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "3e39b63c-49a3-43f1-a1a9-b0a99892385c",
    "metadata": {},
    "outputs": [],
@@ -3687,7 +3699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "id": "8a587cb4",
    "metadata": {},
    "outputs": [],
@@ -3735,7 +3747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "id": "c6111038",
    "metadata": {},
    "outputs": [],
@@ -3753,7 +3765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "id": "5cb708ae",
    "metadata": {},
    "outputs": [
@@ -3761,7 +3773,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CNN model created\n"
+      "torch.Size([517845, 1, 14, 14]) torch.Size([517845]) torch.Size([129462, 1, 14, 14]) torch.Size([129462])\n",
+      "CNN model created\n",
+      "Epoch 1/20 - Loss: 0.1177, Accuracy: 0.9730, F1 Score: 0.9522\n",
+      "Epoch 2/20 - Loss: 0.0813, Accuracy: 0.9764, F1 Score: 0.9575\n",
+      "Epoch 3/20 - Loss: 0.0716, Accuracy: 0.9816, F1 Score: 0.9671\n",
+      "Epoch 4/20 - Loss: 0.0662, Accuracy: 0.9830, F1 Score: 0.9697\n",
+      "Epoch 5/20 - Loss: 0.0627, Accuracy: 0.9841, F1 Score: 0.9717\n",
+      "Epoch 6/20 - Loss: 0.0602, Accuracy: 0.9848, F1 Score: 0.9729\n",
+      "Epoch 7/20 - Loss: 0.0586, Accuracy: 0.9854, F1 Score: 0.9742\n",
+      "Epoch 8/20 - Loss: 0.0565, Accuracy: 0.9859, F1 Score: 0.9749\n",
+      "Epoch 9/20 - Loss: 0.0555, Accuracy: 0.9855, F1 Score: 0.9742\n",
+      "Epoch 10/20 - Loss: 0.0540, Accuracy: 0.9867, F1 Score: 0.9763\n",
+      "Epoch 11/20 - Loss: 0.0532, Accuracy: 0.9864, F1 Score: 0.9758\n",
+      "Epoch 12/20 - Loss: 0.0523, Accuracy: 0.9875, F1 Score: 0.9779\n",
+      "Epoch 13/20 - Loss: 0.0519, Accuracy: 0.9879, F1 Score: 0.9785\n",
+      "Epoch 14/20 - Loss: 0.0510, Accuracy: 0.9883, F1 Score: 0.9794\n",
+      "Epoch 15/20 - Loss: 0.0505, Accuracy: 0.9868, F1 Score: 0.9765\n",
+      "Epoch 16/20 - Loss: 0.0503, Accuracy: 0.9876, F1 Score: 0.9780\n",
+      "Epoch 17/20 - Loss: 0.0496, Accuracy: 0.9892, F1 Score: 0.9809\n",
+      "Epoch 18/20 - Loss: 0.0500, Accuracy: 0.9887, F1 Score: 0.9800\n",
+      "Epoch 19/20 - Loss: 0.0481, Accuracy: 0.9877, F1 Score: 0.9781\n",
+      "Epoch 20/20 - Loss: 0.0485, Accuracy: 0.9893, F1 Score: 0.9811\n",
+      "Model training complete and saved.\n"
      ]
     }
    ],
@@ -4543,7 +4577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
